--- a/projects/index.html
+++ b/projects/index.html
@@ -7,9 +7,7 @@ title: Projects
         {% for project in site.data.projects %}
         <li>
             <div class="project">
-                <a href="{{ project.link }}"><img src="{{ project.image }}" class="project-image"></a>
-
-
+                <a href="{{ project.link }}"><img class="gfyitem project-image" data-id="{{ project.gfycat }}" data-dot="false" data-controls="false"/></a>
                 <h3 class="project-title"><a href="{{ project.link }}">{{ project.name }}</a></h3> 
                 <div class="project-links">
                     <a href="{{ project.repo }}" title="Projects" target="_blank">github</a>
@@ -29,3 +27,4 @@ title: Projects
         {% endfor %}
     </ul>
 </div>
+
