--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,10 @@ title: About
             </span>
         </div>
     </div>
-    <div id="interests"  class="section">      
-        <canvas id="pcg-canvas"  class="section-image right" width="200" height="200"></canvas>
+    <div id="interests"  class="section">    
+        <div class="section-image right" id="pcg-container">
+            <canvas id="pcg-canvas"  width="200" height="200"></canvas>
+        </div>
         <div class="section-text">             
             <h2 class="section-header">I Am Interested in</h2>
             <span>
@@ -34,3 +36,4 @@ title: About
         </div>
     </div>
 </div>
+<script src="/scripts/pcg.js"></script>
