--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@ title: About
         <div class="section-text">
             <h2 class="section-header">I Am Good at</h2>
             <span>
-                Learning new stuff and finding the right tool for the job. I started developing in C++, then Java and .Net, took a detour with Objective C for an iPad app and inevitably ended up with Javascript. Today I use a bit of each in my day time job and mainly Javascript in my spare time. I have experience with cloud architecture and use Azure to host all of my creations. I love that we are in a time where we can deploy a site, scale to multiple instances, easliy spin up a VM or do many other stuff that used to take days, in a matter of minutes and at very low cost. All of these are no longer <a href="http://www.hanselman.com/blog/WeAreAbstractingOnTheShouldersOfGiants.aspx" target="_blank">obstacles</a> on our way to making and creating.
+                Learning new stuff and finding the right tool for the job. I started developing in C++, then Java and .Net, took a detour with Objective C for an iPad app and inevitably ended up with Javascript. Today I use a bit of each in my day time job and mainly Javascript in my spare time. I have experience with cloud architecture and use Azure to host all of my creations. I love that we are in a time where we can deploy a site, scale to multiple instances, easliy spin up a VM or do many other stuff that used to take days, in a matter of minutes and at very low cost. All of these are no longer <a href="http://www.hanselman.com/blog/WeAreAbstractingOnTheShouldersOfGiants.aspx" target="_blank">obstacles</a> on our creative path.
             </span> 
         </div>
     </div>
