--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ title: About
     </div>
     <div id="interests"  class="section">    
         <div class="section-image right" id="pcg-container">
-            <canvas id="pcg-canvas"  width="200" height="200"></canvas>
+            <a href="http://codepen.io/odedw/details/dAmbo" target="_blank">
+                <canvas id="pcg-canvas"  width="200" height="200"></canvas>
+            </a>
         </div>
         <div class="section-text">             
             <h2 class="section-header">I Am Interested in</h2>
