use createjs ticker and move loading icon pcg

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@ title: About
         </div>
     </div>
     <div id="interests"  class="section">    
-        <div class="section-image right" id="pcg-container">
-            <a href="http://codepen.io/odedw/details/dAmbo" target="_blank">
-                <canvas id="pcg-canvas"  width="200" height="200"></canvas>
-            </a>
-        </div>
+        <img id="profile-pic" src="/images/profile2.jpg" class="section-image right"/>
         <div class="section-text">             
             <h2 class="section-header">I Am Interested in</h2>
             <span>
@@ -29,7 +25,12 @@ title: About
         </div>         
     </div>
     <div id="skills" class="section">
-        <img id="profile-pic" src="/images/profile2.jpg" class="section-image left"/>
+         <div class="section-image left" id="pcg-container">
+            <a href="http://codepen.io/odedw/details/dAmbo" target="_blank">
+                <canvas id="pcg-canvas"  width="200" height="200"></canvas>
+            </a>
+        </div>
+        
         <div class="section-text">
             <h2 class="section-header">I Am Good at</h2>
             <span>
@@ -38,4 +39,4 @@ title: About
         </div>
     </div>
 </div>
-<script src="/scripts/pcg.js"></script>
+<script src="/scripts/pcg.min.js"></script>
