change image to trapped circle

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@ title: About
         </div>
     </div>
     <div id="interests"  class="section">    
-        <img id="profile-pic" src="/images/profile2.jpg" class="section-image right"/>
+        <div class="section-image right" id="circle-container">
+            <a href="http://codepen.io/odedw/details/hxruE" target="_blank">
+                <canvas id="circle-canvas"  width="200" height="200"></canvas>
+            </a>
+        </div>
         <div class="section-text">             
             <h2 class="section-header">I Am Interested in</h2>
             <span>
@@ -39,4 +43,5 @@ title: About
         </div>
     </div>
 </div>
+<script src="/scripts/circle.min.js"></script>
 <script src="/scripts/pcg.min.js"></script>
