add codepen, limit trapped circle

--- a/index.html
+++ b/index.html
@@ -43,5 +43,5 @@ title: About
         </div>
     </div>
 </div>
-<script src="/scripts/circle.min.js"></script>
+<script src="/scripts/circle.js"></script>
 <script src="/scripts/pcg.min.js"></script>
