--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: About
                 Tech lead at <a href="https://www.soluto.com" target="_blank">Soluto</a> by day,<br/>
                 maker of <a href="/projects">cool things</a> by night,<br/>
                 bass player for <a href="http://monkeymindmusic.bandcamp.com/album/tal-kenig-ep" target="_blank">Monkeymind</a> on the weekends,<br/>
-                husband to Lisa and father to Cate round the clock.<br/>
+                husband to Lisa and father to Cate around the clock.<br/>
             </span>
         </div>
     </div>
@@ -24,7 +24,7 @@ title: About
         <div class="section-text">             
             <h2 class="section-header">I Am Interested in</h2>
             <span>
-                Procedural content generation, which is for me creating art that creates art. I'm a gamer and a <a href="/music">musician</a> as well and am always looking for interesting ways to <a href="http://gameofmusic.odedwelgreen.com" target="_blank">combine</a> all three.
+                Procedural content generation, which for me is creating art that creates art. I'm a gamer and a <a href="/music">musician</a> as well and am always looking for interesting ways to <a href="http://gameofmusic.odedwelgreen.com" target="_blank">combine</a> all three.
             </span>                     
         </div>         
     </div>
@@ -38,7 +38,7 @@ title: About
         <div class="section-text">
             <h2 class="section-header">I Am Good at</h2>
             <span>
-                Learning new stuff and finding the right tool for the job. I started developing in C++, then Java and .Net, took a detour with Objective C for an iPad app and inevitably ended up with Javascript. Today I use a bit of each in my day time job and mainly Javascript in my spare time. I have experience with cloud architecture and use Azure to host all of my creations. I love that we are in a time where we can deploy a site, scale to multiple instances, easliy spin up a VM or do many other stuff that used to take days, in a matter of minutes and at very low cost. All of these are no longer <a href="http://www.hanselman.com/blog/WeAreAbstractingOnTheShouldersOfGiants.aspx" target="_blank">obstacles</a> on our creative path.
+                Learning new stuff and finding the right tool for the job. I started developing in C++, then Java and .Net, took a detour with Objective C for an iPad app and inevitably ended up with Javascript. Today I use a bit of each in my day job and mainly Javascript in my spare time. I have experience with cloud architecture and use Azure to host all of my creations. I love that we live in a time where we can deploy a site, scale to multiple instances, easliy spin up a VM or do many other things that used to take days, in a matter of minutes and at very low cost. All of these are no longer <a href="http://www.hanselman.com/blog/WeAreAbstractingOnTheShouldersOfGiants.aspx" target="_blank">obstacles</a> on our creative path.
             </span> 
         </div>
     </div>
