--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: About
         </div>
     </div>
 </div>
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://code.createjs.com/easeljs-0.7.1.min.js"></script>
-<script src="http://code.createjs.com/tweenjs-0.5.1.min.js"></script>
-<script src="/scripts/applib.js"></script>
+<script async src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script async src="http://code.createjs.com/easeljs-0.7.1.min.js"></script>
+<script async src="http://code.createjs.com/tweenjs-0.5.1.min.js"></script>
+<script async src="/scripts/applib.js"></script>
