--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: About
             <span>
                 Tech lead at <a href="https://www.soluto.com" target="_blank">Soluto</a> by day,<br/>
                 maker of <a href="/projects">cool things</a> by night,<br/>
-                bass player for <a href="http://monkeymindmusic.bandcamp.com/album/tal-kenig-ep" target="_blank">Monkeymind</a> on the weekends,<br/>
+                guitarist for <a href="https://www.facebook.com/pages/ISHIM/1425806957715494" target="_blank">ISHIM</a> on the weekends,<br/>
                 husband to Lisa and father to Cate around the clock.<br/>
             </span>
         </div>
