--- a/projects/index.html
+++ b/projects/index.html
@@ -42,5 +42,6 @@ title: Projects
         {% endfor %}
     </ul>
     <script async src="//codepen.io/assets/embed/ei.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </div>
 
