--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: About
                 Tech lead at <a href="https://www.soluto.com" target="_blank">Soluto</a> by day,<br/>
                 maker of <a href="/projects">cool things</a> by night,<br/>
                 guitarist for <a href="https://www.facebook.com/pages/ISHIM/1425806957715494" target="_blank">ISHIM</a> on the weekends,<br/>
-                husband to Lisa and father to Cate around the clock.<br/>
+                husband and dad around the clock.<br/>
             </span>
         </div>
     </div>
@@ -38,7 +38,7 @@ title: About
         <div class="section-text">
             <h2 class="section-header">I Am Good at</h2>
             <span>
-                Learning new stuff and finding the right tool for the job. I started developing in C++, then Java and .Net, took a detour with Objective C for an iPad app and inevitably ended up with Javascript. Today I use a bit of each in my day job and mainly Javascript in my spare time. I have experience with cloud architecture and use Azure to host all of my creations. I love that we live in a time where we can deploy a site, scale to multiple instances, easliy spin up a VM or do many other things that used to take days, in a matter of minutes and at very low cost. All of these are no longer <a href="http://www.hanselman.com/blog/WeAreAbstractingOnTheShouldersOfGiants.aspx" target="_blank">obstacles</a> on our creative path.
+                Learning new things and finding the right tool for the job. I started developing in C++, then Java and .Net, took a detour with Objective C and inevitably ended up with Javascript. Today I use a bit of each in my day job and mainly Javascript in my spare time. I have in experience in design and development of scalable cloud services as well web and mobile applications. I am passionate about user experience & Lean methodology. I love that we live in a time where we can deploy a site, scale to multiple instances, easliy spin up a VM or do many other things that used to take days, in a matter of minutes and at very low or zero cost. All of these are no longer <a href="http://www.hanselman.com/blog/WeAreAbstractingOnTheShouldersOfGiants.aspx" target="_blank">obstacles</a> on our creative path.
             </span> 
         </div>
     </div>
