--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: About
 ---
 <div id="about-container">
     <div id="general-info" class="section">
-        <img id="profile-pic" src="/images/profile1.jpg" class="section-image left"/>
+        <img id="profile-pic" src="/public/images/profile1.jpg" class="section-image left"/>
         <div class="section-text">
             <h2 class="section-header">I Am a</h2>
             <span>
