--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: About
         <div class="section-text">
             <h2 class="section-header">I Am a</h2>
             <span>
-                Tech lead at <a href="https://www.soluto.com" target="_blank">Soluto</a> by day,<br/>
+                Tech lead at <a href="https://www.soluto.com" target="_blank">Soluto</a> by day,
                 maker of <a href="/projects">cool things</a> by night,<br/>
-                guitarist for <a href="https://www.facebook.com/pages/ISHIM/1425806957715494" target="_blank">ISHIM</a> on the weekends,<br/>
+                guitarist for <a href="https://www.facebook.com/pages/ISHIM/1425806957715494" target="_blank">ISHIM</a> on the weekends,
                 husband and dad around the clock.<br/>
             </span>
         </div>
