--- a/projects/index.html
+++ b/projects/index.html
@@ -41,13 +41,6 @@ title: Projects
     </li>
     {% endfor %}
   </ul>
-  <script>
-  (function(d, t) {
-    var g = d.createElement(t),
-    s = d.getElementsByTagName(t)[0];
-    g.src = 'https://assets.gfycat.com/js/gfyajax-0.517d.js';
-    s.parentNode.insertBefore(g, s);
-  }(document, 'script'));
-  </script>
+  <script type"text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
   <script async src="http://codepen.io/assets/embed/ei.js"></script>
 </div>
