--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@ title: About
             <h2 class="section-header">I Am a</h2>
             <span>
                 Director of Engineering at <a href="https://www.soluto.com" target="_blank">Soluto</a> by day,
-                maker of <a href="/projects">cool things</a> by night,<br/>
-                guitarist for <a href="https://www.facebook.com/pages/ISHIM/1425806957715494" target="_blank">ISHIM</a> on the weekends,
-                husband and dad around the clock.<br/>
+                maker of <a href="/projects">cool things</a> by night, <a href="/music">guitarist</a> and <a href="/music">composer</a> on the weekends,
+                husband and father around the clock.<br/>
             </span>
         </div>
     </div>
