--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@ title: About
         <div class="section-text">
             <h2 class="section-header">I Am a</h2>
             <span>
-                Director of Engineering at <a href="https://www.soluto.com" target="_blank">Soluto</a> by day,
-                maker of <a href="/projects">cool things</a> by night, <a href="/music">guitarist</a> and <a href="/music">composer</a> on the weekends,
+                Director of Engineering at <a href="https://www.solutotlv.com" target="_blank">Soluto</a> by day,</br>
+                maker of <a href="/projects">cool things</a> by night,</br>
+                <a href="/music">guitarist</a> and <a href="/music">composer</a> on the weekends,
                 husband and father around the clock.<br/>
             </span>
         </div>
     </div>
     <div id="interests"  class="section">
         <div class="section-image right" id="circle-container">
-            <a href="http://codepen.io/odedw/details/hxruE" target="_blank">
+            <a href="//codepen.io/odedw/details/hxruE" target="_blank">
                 <canvas id="circle-canvas"  width="200" height="200"></canvas>
             </a>
         </div>
         <div class="section-text">
             <h2 class="section-header">I Am Interested in</h2>
             <span>
-                Procedural content generation, which for me is creating art that creates art. I'm a gamer and a <a href="/music">musician</a> as well and am always looking for interesting ways to <a href="http://gameofmusic.odedwelgreen.com" target="_blank">combine</a> all three.
+                Procedural content generation, which for me is creating art that creates art. I'm a gamer and a <a href="/music">musician</a> as well and am always looking for interesting ways to <a href="//gameofmusic.odedwelgreen.com" target="_blank">combine</a> all three.
             </span>
         </div>
     </div>
     <div id="skills" class="section">
          <div class="section-image left" id="pcg-container">
-            <a href="http://codepen.io/odedw/details/dAmbo" target="_blank">
+            <a href="//codepen.io/odedw/details/dAmbo" target="_blank">
                 <canvas id="pcg-canvas"  width="200" height="200"></canvas>
             </a>
         </div>
@@ -42,6 +43,6 @@ title: About
         </div>
     </div>
 </div>
-<script src="http://code.createjs.com/easeljs-0.7.1.min.js"></script>
-<script src="http://code.createjs.com/tweenjs-0.5.1.min.js"></script>
+<script src="//code.createjs.com/easeljs-0.7.1.min.js"></script>
+<script src="//code.createjs.com/tweenjs-0.5.1.min.js"></script>
 <script src="/public/js/app.min.js"></script>
