--- a/music/index.html
+++ b/music/index.html
@@ -17,7 +17,7 @@ title: Music
                 {% elsif musicObject.type == "youtube" %}
                 {% for video in musicObject.embed %}
                 <div class="video-wrapper">
-                    <iframe  class="youtube-video" src="//www.youtube.com/v/{{ video }}" frameborder="0" allowfullscreen></iframe>
+                    <iframe  class="youtube-video" src="https://www.youtube.com/embed/{{ video }}" frameborder="0" allowfullscreen></iframe>
                 </div>
                 {% endfor %}
                 {% endif %}
