--- a/projects/index.html
+++ b/projects/index.html
@@ -37,10 +37,10 @@ title: Projects
     {% for codepen in site.data.codepens %}
     <li class="codepen-item">
       <h3 class="codepen-header">{{ codepen.name }}</h3>
-      <p data-height="329" data-theme-id="6466" data-slug-hash="{{ codepen.hash }}" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/odedw/pen/{{ codepen.hash }}/'>Loading Icon</a> by Oded Welgreen (<a href='http://codepen.io/odedw'>@odedw</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+      <p data-height="329" data-theme-id="6466" data-slug-hash="{{ codepen.hash }}" data-default-tab="result" class='codepen'>See the Pen <a href='https://codepen.io/odedw/pen/{{ codepen.hash }}/'>Loading Icon</a> by Oded Welgreen (<a href='https://codepen.io/odedw'>@odedw</a>) on <a href='https://codepen.io'>CodePen</a>.</p>
     </li>
     {% endfor %}
   </ul>
   <script type"text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
-  <script async src="http://codepen.io/assets/embed/ei.js"></script>
+  <script async src="https://codepen.io/assets/embed/ei.js"></script>
 </div>
