responsive about layout

--- a/Old/index.html
+++ b/Old/index.html
@@ -8,7 +8,7 @@ title: About
         <div class="section-text">
             <h2 class="section-header">I Am a</h2>
             <span>
-                Director of Engineering at <a href="https://www.solutotlv.com" target="_blank">Soluto</a> by day,</br>
+                Tech lead and problem solver at <a href="https://www.solutotlv.com" target="_blank">Soluto</a> by day,</br>
                 maker of <a href="/projects">cool things</a> by night,</br>
                 <a href="/music">guitarist</a> and <a href="/music">composer</a> on the weekends,
                 husband and father around the clock.<br/>
