deploy: c35a8409002eeb52c1efea6fd686f14a85355beb

--- a/about/index.html
+++ b/about/index.html
@@ -71,11 +71,11 @@
   </p>
   <p class="mt-6">
     <span class="text-gray-100 text-xl font-text">I am interested in </span>
-    <span>solving hard problems, <a href="/music">making music</a>, modular synthesizers, <a href="https://www.instagram.com/p/CCNHPQ6AVbA/" target="_blank" rel="noopener">proceduraly generated art</a>, astronomy and many more things. In short, I am eternally curious.</span>
+    <span>solving hard problems, <a href="/music">making music</a>, modular synthesizers, <a href="https://www.instagram.com/p/CCNHPQ6AVbA/" target="_blank" rel="noopener">procedurally  generated art</a>, astronomy and many more things. In short, I am eternally curious.</span>
   </p>
   <p class="mt-6">
     <span class="text-gray-100 text-xl font-text">I am good at </span>
-    <span>learning new things and finding the right tool for the job. I have worked with a lot of different technologies <a href="https://www.linkedin.com/in/odedwelgreen/" target="_blank" rel="noopener">over the years</a> and always enjoy learning a new one. Today I mainly work with Typescript & AWS. I have experience in design and development of scalable cloud services as well as web and mobile applications. I am passionate about user experience & Lean methodology. There has never been a better time for creation and creativity - we can deploy a site, scale to multiple instances, easliy spin up a VM or do many other things that used to take days, in a matter of minutes and at very low or zero cost. All of these are no longer <a href="https://www.hanselman.com/blog/we-are-abstracting-on-the-shoulders-of-giants" target="_blank" rel="noopener">obstacles</a> on our creative path.</span>
+    <span>learning new things and finding the right tool for the job. I have worked with a lot of different technologies <a href="https://www.linkedin.com/in/odedwelgreen/" target="_blank" rel="noopener">over the years</a> and always enjoy learning a new one. Today I mainly work with Typescript & AWS. I have experience in design and development of scalable cloud services as well as web and mobile applications. I am passionate about user experience & Lean methodology. There has never been a better time for creation and creativity - we can deploy a site, scale to multiple instances, easily spin up a VM or do many other things that used to take days, in a matter of minutes and at very low or zero cost. All of these are no longer <a href="https://www.hanselman.com/blog/we-are-abstracting-on-the-shoulders-of-giants" target="_blank" rel="noopener">obstacles</a> on our creative path.</span>
   </p>
 </div>
 
