deploy: c774a522f1282a74ec83dd5b8c3e458eaef95dba

--- a/art/index.html
+++ b/art/index.html
@@ -64,7 +64,7 @@
 
 <div class="">
   <div class="mb-10" aria-level="1" role="heading">
-        I am interested in proceduraly generated art as well as the intersection between art, technology and music. I often try to find a way to combine the three.
+        I am interested in procedurally generated art as well as the intersection between art, technology and music. I often try to find a way to combine the three.
         Here are some of my attempts to explore these concepts.
     </div>
   
@@ -227,6 +227,7 @@
   
   <script async src="//www.instagram.com/embed.js"></script>
 </div>
+
       </main>
     </div>
     <footer role="contentinfo" id="footer" class="border-t border-gray-300 border-solid text-xs flex-shrink-0 flex justify-end p-2">
