deploy: e1bc9fc244618a84920b3f64c076d3be55b2a66e

--- a/about/index.html
+++ b/about/index.html
@@ -71,7 +71,7 @@
   </p>
   <p class="mt-6">
     <span class="text-gray-100 text-xl font-text">I am interested in </span>
-    <span>solving hard problems, <a href="/music">making music</a>, modular synthesizers, <a href="https://www.instagram.com/p/CCNHPQ6AVbA/" target="_blank" rel="noopener">procedurally  generated art</a>, astronomy and many more things. In short, I am eternally curious.</span>
+    <span>solving hard problems, <a href="/music">making music</a>, modular synthesizers, <a href="https://www.instagram.com/inja.lab/" target="_blank" rel="noopener">procedurally  generated art</a>, astronomy and many more things. In short, I am eternally curious.</span>
   </p>
   <p class="mt-6">
     <span class="text-gray-100 text-xl font-text">I am good at </span>
