--- a/art/index.html
+++ b/art/index.html
@@ -78,7 +78,7 @@
     <div class="youtube-container">
       <iframe title=Precursor - Opulent (Music Video) class="youtube" src="https://www.youtube.com/embed/EUWKE76wVMQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="mt-2">A collaboration with the music producer Precursor. This work, created with Processing and GauGAN2, won an honorable mention at the &lt;a href=&quot;https://aon.nin.nl&quot;&gt;Art of Neuroscience 2022&lt;/a&gt; competition.</div>
+    <div class="mt-2">A collaboration with the music producer Precursor. This work, created with Processing and GauGAN2, won an honorable mention at the Art of Neuroscience 2022 competition.</div>
   </div>
 
     
