--- a/art/index.html
+++ b/art/index.html
@@ -76,7 +76,7 @@
       
   <div class="w-4/5 mx-auto mb-16">
     <div class="youtube-container">
-      <iframe title=Intro to generative art with P5.js class="youtube" src="https://www.youtube.com/watch?v=gvTsaYc0Y8w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe title=Intro to generative art with P5.js class="youtube" src="https://www.youtube.com/embed/gvTsaYc0Y8w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="mt-2">A talk I gave at the NashJS meetup about Generative Art.</div>
   </div>
