--- a/art/index.html
+++ b/art/index.html
@@ -57,6 +57,8 @@
       <span class="px-1">•</span>
       <a href="/art" >art</a>
       <span class="px-1">•</span>
+      <a href="/talks" >talks</a>
+      <span class="px-1">•</span>
       <a href="/about">about</a>
     </nav>
   </div>
@@ -100,7 +102,7 @@
     <div class="youtube-container">
       <iframe title=The Sound of Maze Generation on Youtube class="youtube" src="https://www.youtube.com/embed/p3mymCWzhV8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="mt-2">A visualization and audibilization (conversion of data to sound) of different maze generation algorithms.</div>
+    <div class="mt-2">A visualization and audibilization (conversion of data to sound) of different maze generation algorithms. This video has over 2 million views.</div>
   </div>
 
     
