deploy: 74bad3ec034d6bf2f5a264a8f49169a112bdf6d3

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
   <p class="mt-6">
     <span class="text-gray-100 text-xl font-text">I am a </span>
     <span>father, a partner, a software engineer, a musician and an artist. I like to create things that make the world better.
-        Currently I am a tech lead, full-stack engineer and engineering manager at <a href="https://www.asurion.com/" target="_blank" rel="noopener">Asurion</a>. I enjoy building products that provide value to our users, working in a team, helping others around me grow and growing myself as an engineer and a mentor.</span>
+        Currently I software engineer at <a href="https://spinach.io/" target="_blank" rel="noopener">Spinach</a>. I enjoy building products that provide value to our users, working in a team, helping others around me grow and growing myself as an engineer and a mentor.</span>
   </p>
   <p class="mt-6">
     <span class="text-gray-100 text-xl font-text">I am interested in </span>
